<resources>
    <string name="app_name">OnlineChat</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="hint_name">Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms and Condition</u></string>
    <string name="Register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_t_have_an_account">Don’t have an account?</string>
    <string name="login">Login</string>
    <string name="lbl_Note">Note</string>
    <string name="lbl_hop">hop</string>
</resources>